# ChangeLog for Gentoo System Intialization core utilities.
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2
# $Header$

07 Apr 2005 Martin Schlemmer <azarah@gentoo.org>

        * test-regex.c: Add two more tests.

        * depscan.c
        * misc.c
        * misc.h: Add basic klibc support.  I need to add a mkstemp
        implementation to get it done properly.

12 Mar 2005 Martin Schlemmer <azarah@gentoo.org>

        * Makefile: Also remove the tests in the clean target.

11 Mar 2005 Martin Schlemmer <azarah@gentoo.org>

        * test-regex.c: Add a few strings and patterns.  Enable tests to
        specify if they should fail or pass.

10 Mar 2005 Martin Schlemmer <azarah@gentoo.org>

        * test-regex.c: New file
        * Makefile: Add check target to compile and run tests
        * simple-regex.c (__match_wildcard): Get recursion right so that we
        do not match a wildcard _and_ inc data_p if there are still other
        wildcards (?, *) that could match.

        * Makefile
        * depend.c
        * simple-regex.c: Override the debug/warning CFLAGS.  Kill a few
        warnings.

23 Feb 2005 Martin Schlemmer <azarah@gentoo.org>

        * misc.c: Fix memory leak in mktree().

18 Feb 2005 Martin Schlemmer <azarah@gentoo.org>

        * Makefile: Add -fbounds-checking support when DEBUG=1.
        
        * misc.h: Scrap STRING_LIST_FOR_EACH_SAFE() and recode from scratch
        fixing invalid pointer operations.
        
        * misc.c: Remove the last strlen() from strndup() that caused an
        overrun.

17 Feb 2005 Martin Schlemmer <azarah@gentoo.org>:

        * misc.c: Fix overrun in strndup(), thanks to report from
        Ned Ludd <solar@gentoo.org>.

        * debug.h
        * misc.h
        * simple-regex.c: Print debug/errors to stderr, patch from
        Ned Ludd <solar@gentoo.org>.

        * debug.h: Replace invalid EXIT_FAILSTATUS with EXIT_FAILURE.
        